# expression_template

./: CMakeLists.txt  README.md
include/echo/: expression_template.h
include/echo/expression_template/: arithmetic.h  assignment-def.h  binary_arithmetic-def.h  binary_math-def.h  concept.h  expression.h  expression_template_assignment.h  expression_template_traits.h  map.h  math.h  reduce.h  unary_arithmetic-def.h  unary_math-def.h
unittest/: arithmetic_test.cpp  expression_template_assignment_test.cpp  math_test.cpp  reduce_test.cpp
